# rag_experiment

./: .gitignore  Dockerfile  dev.env  docker-compose.yml  init_pgvector.sql  poetry.toml  pyproject.toml  requirements.txt
app/: config.py
