[tool.poetry]
name = "knowledgellm"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zontov <I'll come up with a email later>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.2.2"
pymupdf = "^1.23.2"
unidecode = "^1.3.6"
fastapi = "^0.103.0"
pydantic = "1.10"
uvicorn = "^0.23.2"
torch = ">=2.0.0, !=2.0.1"
pandas = "^2.1.0"
txtai = "^6.0.0"
pgvector = "^0.2.1"
asyncpg = "^0.28.0"
text-generation = "^0.6.0"
httpx = "^0.24.1"
requests = "^2.31.0"
langchain = "^0.0.286"
beautifulsoup4 = "^4.12.2"
pdfminer-six = "^20221105"
tqdm = "^4.66.1"
sortedcontainers = "2.2.2"
tika = "^2.6.0"
pypandoc = "^1.11"
docx = "^0.2.4"
pdf2docx = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
